[gd_scene load_steps=21 format=2]

[ext_resource path="res://Player/Knight.png" type="Texture" id=1]
[ext_resource path="res://Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Utils/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Weapons/WeaponAtlas.tres" type="Texture" id=4]
[ext_resource path="res://Utils/Hitbox.tscn" type="PackedScene" id=5]
[ext_resource path="res://Weapons/MeleeSwipe.png" type="Texture" id=6]
[ext_resource path="res://Weapons/Arrow.tscn" type="PackedScene" id=7]
[ext_resource path="res://Utils/WhiteColor.shader" type="Shader" id=8]
[ext_resource path="res://Sounds/Sword.wav" type="AudioStream" id=9]
[ext_resource path="res://Sounds/PlayerHurt.ogg" type="AudioStream" id=10]

[sub_resource type="Animation" id=1]
resource_name = "Attack"
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Melee/Swipe:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Melee/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.25, 0.75 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Melee/Sword:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0.0, 90.0, 150.0, 180.0 ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "attack_animation_finished"
} ]
}
tracks/4/type = "audio"
tracks/4/path = NodePath("AudioStreamPlayer")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"clips": [ {
"end_offset": 0.0,
"start_offset": 0.0,
"stream": ExtResource( 9 )
} ],
"times": PoolRealArray( 0.2 )
}

[sub_resource type="Animation" id=2]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=3]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.00112864 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=5]
height = 8.0

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 1.535, 6 )

[sub_resource type="ShaderMaterial" id=7]
shader = ExtResource( 8 )
shader_param/active = false

[sub_resource type="CapsuleShape2D" id=8]
radius = 2.0
height = 8.0

[sub_resource type="CapsuleShape2D" id=9]
radius = 5.0
height = 0.0

[sub_resource type="Animation" id=10]
resource_name = "Hurt"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:material:shader_param/active")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ true, false, true, false ]
}
tracks/1/type = "audio"
tracks/1/path = NodePath("AudioStreamPlayer")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"clips": [ {
"end_offset": 0.08,
"start_offset": 0.0,
"stream": ExtResource( 10 )
} ],
"times": PoolRealArray( 0 )
}

[node name="Player" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 2 )
Arrow = ExtResource( 7 )

[node name="AP_Attack" type="AnimationPlayer" parent="."]
playback_speed = 3.0
anims/Attack = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Idle = SubResource( 2 )
anims/RunLeft = SubResource( 3 )
anims/RunRight = SubResource( 4 )

[node name="Melee" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -3 )

[node name="Swipe" type="Sprite" parent="Melee"]
texture = ExtResource( 6 )
hframes = 4
frame = 3

[node name="Sword" type="Sprite" parent="Melee"]
position = Vector2( 0, 3 )
rotation = 3.14159
z_index = 2
texture = ExtResource( 4 )
offset = Vector2( 1, -14 )
vframes = 2
hframes = 8
frame = 2

[node name="Hitbox" parent="Melee" instance=ExtResource( 5 )]
position = Vector2( 0, 3 )
collision_layer = 16
collision_mask = 0
damage = 2

[node name="CollisionShape2D" parent="Melee/Hitbox" index="0"]
position = Vector2( 16, 0 )
shape = SubResource( 5 )
disabled = true

[node name="Ranged" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -3 )

[node name="Sprite" type="Sprite" parent="Ranged"]
position = Vector2( 8, -2 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 4 )
vframes = 2
hframes = 8
frame = 1

[node name="Aim" type="Position2D" parent="Ranged"]
position = Vector2( 7, 0 )

[node name="Shield" type="Area2D" parent="."]
visible = false
position = Vector2( 0, -3 )
input_pickable = false
collision_layer = 64
collision_mask = 64

[node name="Polygon2D" type="Polygon2D" parent="Shield"]
position = Vector2( 2.84217e-14, 5.96046e-08 )
scale = Vector2( 1.33333, 1.2 )
offset = Vector2( -0.249996, -0.166667 )
polygon = PoolVector2Array( 7, -4, 7.75002, 1, 7, 6, 9, 6, 10, 1, 9, -4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Shield"]
position = Vector2( 12, 1 )
shape = SubResource( 6 )

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0, 0, 0.345098 )
polygon = PoolVector2Array( -4, 4, -6, 2, -4, 0, 4, 0, 6, 2, 4, 4 )

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 7 )
texture = ExtResource( 1 )
offset = Vector2( 0, -14 )
hframes = 8
frame = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource( 8 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 4
collision_mask = 32

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 0, -3 )
shape = SubResource( 9 )

[node name="ShaderPlayer" type="AnimationPlayer" parent="."]
anims/Hurt = SubResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
bus = "SFX"
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]

[editable path="Melee/Hitbox"]

[editable path="Hurtbox"]
